# localLLM-RAG-NoAPIKeys

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: routes_analytics.py  routes_chat.py  routes_documents.py  routes_feedback.py  routes_health.py
backend/app/db/: models.py  session.py
backend/app/ingestion/: chunking.py  loaders.py  pipeline.py
backend/app/llm/: factory.py  pricing.py  prompts.py
backend/app/observability/: feedback.py  langfuse_client.py
backend/app/rag/: chain.py  vectorstore.py
backend/app/schemas/: analytics.py  chat.py  documents.py  feedback.py
backend/tests/: conftest.py  test_api.py  test_ingestion.py  test_observability.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/components/chat/: chat-sidebar.tsx  chat-window.tsx  citation-list.tsx  feedback-buttons.tsx  message-bubble.tsx  usage-stats.tsx
frontend/src/components/documents/: document-table.tsx  file-uploader.tsx  url-ingest-form.tsx
frontend/src/components/layout/: hero-graphic.tsx  navbar.tsx  page-hero.tsx  theme-toggle.tsx
frontend/src/components/ui/: switch.tsx  textarea.tsx
frontend/src/lib/: api.ts  session.ts  types.ts
