[project]
name = "rag-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "langchain>=1.3.7",
    "langchain-anthropic>=1.4.5",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.6",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.0",
    "langchain-text-splitters>=1.1.2",
    "langfuse>=4.7.1",
    "lxml>=6.1.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
    "tabulate>=0.10.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "fpdf2>=2.8.7",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
pythonpath = ["."]
